--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
-    " ": "^1.11.10",
+    "dayjs": "^1.11.10",
     "echarts": "^5.4.3",
     "ngx-echarts": "^17.1.0",
     "rxjs": "~7.8.0",
