--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "angular-oauth2-oidc": "^17.0.1",
     "dayjs": "^1.11.10",
     "echarts": "^5.4.3",
     "ngx-echarts": "^17.1.0",
